--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,9 @@ djangorestframework = "3.14.0"
 drf-spectacular = "0.27.0"
 dj-database-url = "2.1.0"
 mysqlclient = "^2.2.4"
-gunicorn = "^22.0.0"
 pytelegrambotapi = "^4.21.0"
 requests = "^2.32.3"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
